--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
-_site
-.jekyll-cache
+# Hugo
+public/
+resources/
+.hugo_build.lock
+hugo_stats.json
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
